добавил редактирование Note
надо подправить массивы в NoteModel

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Modules.NoteBook.Layout.Note"/>
+        <activity android:name=".Modules.NoteBook.Layout.NotesAdd"/>
     </application>
 
 </manifest>
