--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".Modules.User.Layout.UserLogin"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Modules.User.Layout.UserLogin" />
         <activity android:name=".Modules.User.Layout.UserRegister" />
-        <activity android:name=".Modules.NoteBook.Layout.Part">
-        </activity>
+        <activity android:name=".Modules.NoteBook.Layout.Part" />
         <activity android:name=".Modules.NoteBook.Layout.Note" />
         <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
         <activity android:name=".Modules.Test.Layout.TestRequest">
@@ -25,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Modules.StaticText.Layout.StaticTextList" />
+        <activity android:name=".Modules.StaticText.Layout.StaticTextDetail"></activity>
     </application>
 
 </manifest>
