Добавил статический текст

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,14 @@
         <activity android:name=".Modules.NoteBook.Layout.Note" />
         <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
         <activity android:name=".Modules.Test.Layout.TestRequest">
+        </activity>
+        <activity android:name=".Modules.StaticText.Layout.StaticTextList" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextList" />
         <activity android:name=".Modules.StaticText.Layout.StaticTextDetail"></activity>
     </application>
 
