--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.rubiconepro.study">
+          package="ru.rubiconepro.study">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Modules.User.Layout.UserLogin" />
-        <activity android:name=".Modules.User.Layout.UserRegister" />
-        <activity android:name=".Modules.NoteBook.Layout.Part" />
-        <activity android:name=".Modules.NoteBook.Layout.Note" />
-        <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Modules.User.Layout.UserLogin"/>
+        <activity android:name=".Modules.User.Layout.UserRegister"/>
+        <activity android:name=".Modules.NoteBook.Layout.Part"/>
+        <activity android:name=".Modules.NoteBook.Layout.Note"/>
+        <activity android:name=".Modules.NoteBook.Layout.NotesAdd"/>
         <activity android:name=".Modules.Test.Layout.TestRequest">
         </activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextList" >
+        <activity android:name=".Modules.StaticText.Layout.StaticTextList">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextDetail"></activity>
+        <activity android:name=".Modules.StaticText.Layout.StaticTextDetail"/>
+        <activity android:name=".Modules.Tests.Layout.TestsPass">
+        </activity>
     </application>
 
 </manifest>
