--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.carrotsearch:hppc:0.8.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'io.requery:sqlite-android:3.24.0'
+    implementation 'com.applandeo:material-calendar-view:1.4.0'
 }
