--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,10 @@
         <activity android:name=".Modules.NoteBook.Layout.Part" />
         <activity android:name=".Modules.NoteBook.Layout.Note" />
         <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
-        <activity android:name=".Modules.Test.Test">
-
-        </activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextList"></activity>
+        <activity android:name=".Modules.Test.Test"></activity>
+        <activity android:name=".Modules.StaticText.Layout.StaticTextList" />
         <activity android:name=".Modules.StaticText.Layout.StaticTextDetail" />
-        <activity android:name=".Modules.Tests.Layout.TestsPass"></activity>
+        <activity android:name=".Modules.Tests.Layout.TestsPass" />
         <activity android:name=".Modules.Schedule.Layout.SchedulerMainLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Modules.Schedule.Layout.SchedulerEventLayout"></activity>
     </application>
 
 </manifest>
