--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'io.requery:sqlite-android:3.24.0'
     implementation 'com.applandeo:material-calendar-view:1.4.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'es.voghdev.pdfviewpager:library:1.0.4'
 }
