--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
+        <uses-permission android:name="android.permission.INTERNET" />
         <activity android:name=".Modules.User.Layout.UserLogin" />
         <activity android:name=".Modules.User.Layout.UserRegister" />
-        <activity android:name=".Modules.NoteBook.Layout.Part" >
+        <activity android:name=".Modules.NoteBook.Layout.Part"></activity>
+        <activity android:name=".Modules.NoteBook.Layout.Note" />
+        <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
+        <activity android:name=".Modules.Test.Test" />
+        <activity android:name=".Modules.StaticText.Layout.StaticTextList" />
+        <activity android:name=".Modules.StaticText.Layout.StaticTextDetail" />
+        <activity android:name=".Modules.Tests.Layout.TestsPass" />
+        <activity android:name=".Modules.Scheduler.Layout.SchedulerMainLayout" />
+        <activity android:name=".Modules.PdfViewer.Layout.PdfViewerMainLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Modules.NoteBook.Layout.Note" />
-        <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
-        <activity android:name=".Modules.Test.Test">
-
-        </activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextList"></activity>
-        <activity android:name=".Modules.StaticText.Layout.StaticTextDetail" />
-        <activity android:name=".Modules.Tests.Layout.TestsPass"></activity>
-        <activity android:name=".Modules.Scheduler.Layout.SchedulerMainLayout">
-
-        </activity>
+        <activity android:name=".Modules.PdfViewer.Layout.PdfViewPagesMainLayout"></activity>
     </application>
 
 </manifest>
