--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Modules.User.Layout.UserLogin" />
         <activity android:name=".Modules.User.Layout.UserRegister" />
-        <activity android:name=".Modules.NoteBook.Layout.Part"></activity>
+        <activity android:name=".Modules.NoteBook.Layout.Part" />
         <activity android:name=".Modules.NoteBook.Layout.Note" />
         <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
         <activity android:name=".Modules.Test.Test" />
@@ -22,9 +22,7 @@
         <activity android:name=".Modules.StaticText.Layout.StaticTextDetail" />
         <activity android:name=".Modules.Tests.Layout.TestsPass" />
         <activity android:name=".Modules.Scheduler.Layout.SchedulerMainLayout" />
-        <activity android:name=".Modules.PDFView.Layout.PDFViewLayout">
-
-        </activity>
+        <activity android:name=".Modules.PDFView.Layout.PDFViewLayout"></activity>
         <activity android:name=".Modules.TestLayout.Layout.TestLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Modules.Base.Layout.PreloadDialogLayout"></activity>
     </application>
 
 </manifest>
