--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-        <activity android:name=".Modules.User.Layout.UserLogin" />
+        <activity android:name=".Modules.User.Layout.UserLogin" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Modules.User.Layout.UserRegister" />
         <activity android:name=".Modules.NoteBook.Layout.Part"></activity>
         <activity android:name=".Modules.NoteBook.Layout.Note" />
         <activity android:name=".Modules.NoteBook.Layout.NotesAdd" />
         <activity android:name=".Modules.Test.Test" />
         <activity android:name=".Modules.StaticText.Layout.StaticTextList">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Modules.StaticText.Layout.StaticTextDetail" />
         <activity android:name=".Modules.Tests.Layout.TestsPass" />
